--- a/aboutme.html
+++ b/aboutme.html
@@ -5,7 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 <title>AboutMe: Carlos</title>
-<link rel="stylesheet" type="text/css" href="AboutMev1.css"/>
+<link rel="stylesheet" type="text/css" href="aboutmev1.css"/>
 </head>
 <body>
 
@@ -16,7 +16,7 @@
 
 <hr/>
 <div id="Ind">
-<h2><a href="Indice.html" title="Indice">Índice</a></h2>
+<h2><a href="index.html" title="Indice">Índice</a></h2>
 </div>
 <hr/>
 
