--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
 <p>Para poder navegar directamente allá donde queramos!</p>
 
-<h2><a href="AboutMe.html#Plataformas" title="Plataformas" >Plataformas</a></h2>
-<h2><a href="AboutMe.html#Pelis" title="Pelis" >Películas</a></h2>
-<h2><a href="AboutMe.html#Series" title="Series" >Series</a></h2>
-<h2><a href="AboutMe.html#Encuesta" title="Encuesta" >Encuesta</a></h2>
+<h2><a href="aboutme.html#Plataformas" title="Plataformas" >Plataformas</a></h2>
+<h2><a href="aboutme.html#Pelis" title="Pelis" >Películas</a></h2>
+<h2><a href="aboutme.html#Series" title="Series" >Series</a></h2>
+<h2><a href="aboutme.html#Encuesta" title="Encuesta" >Encuesta</a></h2>
   
 </body>
 </html>
