--- a/aboutme.html
+++ b/aboutme.html
@@ -23,7 +23,7 @@
 
 <div class="Bienv">
     <p id="Inicio"><br/> Bienvenidos a mi página web. <br/><br/>
-        <img src="../Imagenes/Minions.gif" width="160" height="80" alt=""/>
+        <img src="./Imagenes/Minions.gif" width="160" height="80" alt=""/>
     </p>
 </div>
 
@@ -48,7 +48,7 @@
     <legend>Plataformas de Series y Películas</legend>
     <br/>
     <a href="https://www.netflix.com/es/" title="Netflix" >
-        <img src="../Imagenes/NetflixLogo.png" width="80" height="70" alt="" /> 
+        <img src="Imagenes/NetflixLogo.png" width="80" height="70" alt="" /> 
     </a>
     <p>Mi plataforma favorita por el momento, muchas de las mejores series están aquí.
     <br/>
