--- a/aboutme.html
+++ b/aboutme.html
@@ -56,7 +56,7 @@
     </p>
     <br/><br/>
     <a href="https://www.hbomax.com/es/" title="HBO">
-        <img src="../Imagenes/HBOLogo.png" width="100" height="60" alt=""/> 
+        <img src="/Imagenes/HBOLogo.png" width="100" height="60" alt=""/> 
     </a>
     <p>Plataforma muy famosa, pero que nunca ha captado mi atención como para suscribirme.
     <br/>
