--- a/aboutme.html
+++ b/aboutme.html
@@ -23,7 +23,7 @@
 
 <div class="Bienv">
     <p id="Inicio"><br/> Bienvenidos a mi página web. <br/><br/>
-        <img src="./Imagenes/Minions.gif" width="160" height="80" alt=""/>
+        <img src="Imagenes/Minions.gif" width="160" height="80" alt=""/>
     </p>
 </div>
 
@@ -56,7 +56,7 @@
     </p>
     <br/><br/>
     <a href="https://www.hbomax.com/es/" title="HBO">
-        <img src="/Imagenes/HBOLogo.png" width="100" height="60" alt=""/> 
+        <img src="Imagenes/HBOLogo.png" width="100" height="60" alt=""/> 
     </a>
     <p>Plataforma muy famosa, pero que nunca ha captado mi atención como para suscribirme.
     <br/>
@@ -64,12 +64,12 @@
     </p>
     <br/><br/>
     <a href="https://www.primevideo.com/" title="Prime video" >
-        <img src="../Imagenes/PrimeVideoLogo.png" width="100" height="60" alt="" /> 
+        <img src="Imagenes/PrimeVideoLogo.png" width="100" height="60" alt="" /> 
     </a>
     <p>Viene incluído con el <a href="https://www.amazon.es/amazonprime">Amazon Prime</a>, la verdad es que no hay mucha variedad, pero si te gustan las series o películas españolas este es tu sitio.</p>
     <br/><br/>
     <a href="https://www.disney.es/" title="Disney+">
-        <img src="../Imagenes/Disney+Logo.png" width="100" height="60" alt="" /> 
+        <img src="Imagenes/Disney+Logo.png" width="100" height="60" alt="" /> 
     </a>
     <p>Si te gusta Marvel o Pixar este es tu lugar, la cantidad de pelis que hay sobre esos dos temas es increíble. 
     <br/>
@@ -92,18 +92,18 @@
 
 <div id="ALARMA">
     <p>
-        <img src="../Imagenes/Exclamacion.png" width="13" height="25" alt="" /> 
+        <img src="Imagenes/Exclamacion.png" width="13" height="25" alt="" /> 
         &nbsp;
         Es mi <strong>opinión personal</strong> y no tiene por qué coincidir con la vuestra
         &nbsp;
-        <img src="../Imagenes/Exclamacion.png" width="13" height="25" alt="" /> 
+        <img src="Imagenes/Exclamacion.png" width="13" height="25" alt="" /> 
     </p>
 </div>
 
 <div class="Titulo" id="Pelis" >
     <h1>
         PELÍCULAS <br/>
-        <img src="../Imagenes/Peliculas.png" width="100" height="60" alt="" />
+        <img src="Imagenes/Peliculas.png" width="100" height="60" alt="" />
     </h1>
 </div>
 
@@ -119,10 +119,10 @@
         </h4>
     </div>  
     <div class="Seccion">
-            <img src="../Imagenes/Juegosdelhambre.jpg" alt="" />
-            <img src="../Imagenes/JuegosdelhambreEnllamas.jpg" alt="" />
-            <img src="../Imagenes/JuegosdelhambreSinsajo1.jpg" alt="" />
-            <img src="../Imagenes/JuegosdelhambreSinsajo2.jpg" alt="" />
+            <img src="Imagenes/Juegosdelhambre.jpg" alt="" />
+            <img src="Imagenes/JuegosdelhambreEnllamas.jpg" alt="" />
+            <img src="Imagenes/JuegosdelhambreSinsajo1.jpg" alt="" />
+            <img src="Imagenes/JuegosdelhambreSinsajo2.jpg" alt="" />
     </div>
     <div class="Solas">
         <h4><br/>
@@ -130,9 +130,9 @@
         </h4>
     </div>
     <div class="Seccion">
-        <img src="../Imagenes/Divergente.jpg" alt="" />
-        <img src="../Imagenes/Insurgente.jpg" alt="" />
-        <img src="../Imagenes/Leal.jpg" alt="" />
+        <img src="Imagenes/Divergente.jpg" alt="" />
+        <img src="Imagenes/Insurgente.jpg" alt="" />
+        <img src="Imagenes/Leal.jpg" alt="" />
     </div>
 
     <div class="Solas">
@@ -140,7 +140,7 @@
             El misterio de Glass Onion
         </h4>
         <p>
-        <img src="../Imagenes/GlassOnion.jpeg" width="120" height="200" alt="" />
+        <img src="Imagenes/GlassOnion.jpeg" width="120" height="200" alt="" />
         </p>
     </div>
 
@@ -149,7 +149,7 @@
             Spider-Man: far from home
         </h4>
         <p>
-        <img src="../Imagenes/Spiderman, far from home.jpg" width="120" height="200" alt="" />
+        <img src="Imagenes/Spiderman, far from home.jpg" width="120" height="200" alt="" />
         </p>
     </div>
 
@@ -158,7 +158,7 @@
             El juego de Ender
         </h4>
         <p>
-        <img src="../Imagenes/EljuegodeEnder.jpg" width="120" height="200" alt="" />
+        <img src="Imagenes/EljuegodeEnder.jpg" width="120" height="200" alt="" />
         <br/>
         </p>
     </div>
@@ -181,7 +181,7 @@
 <div class="Titulo" id="Series">
     <h1>
         SERIES <br/>
-        <img src="../Imagenes/Peliculas.png" width="100" height="60" alt="" />
+        <img src="Imagenes/Peliculas.png" width="100" height="60" alt="" />
     </h1>
 </div>
 <div class="Fondo">
@@ -196,7 +196,7 @@
             Los 100
         </h4>
         <p>
-        <img src="../Imagenes/Los100.jpg" width="120" height="200" alt="" />
+        <img src="Imagenes/Los100.jpg" width="120" height="200" alt="" />
         </p>
     </div>
 
@@ -205,7 +205,7 @@
             La casa de papel
         </h4>
         <p>
-        <img src="../Imagenes/Lacasadepapel.jpg" width="120" height="200" alt="" />
+        <img src="Imagenes/Lacasadepapel.jpg" width="120" height="200" alt="" />
         </p>
     </div>
 
@@ -214,7 +214,7 @@
             Vis a Vis
         </h4>
         <p>
-        <img src="../Imagenes/Visavis.jpg" width="120" height="200" alt="" />
+        <img src="Imagenes/Visavis.jpg" width="120" height="200" alt="" />
         </p>
     </div>
 
@@ -223,7 +223,7 @@
             Élite
         </h4>
         <p>
-        <img src="../Imagenes/Elite.jpg" width="120" height="200" alt="" />
+        <img src="Imagenes/Elite.jpg" width="120" height="200" alt="" />
         </p>
     </div>
 
@@ -232,7 +232,7 @@
             The Witcher
         </h4>
         <p>
-        <img src="../Imagenes/TheWitcher.jpg" width="120" height="190" alt="" />
+        <img src="Imagenes/TheWitcher.jpg" width="120" height="190" alt="" />
         <br/><br/><br/>
         </p>
     </div>
@@ -258,7 +258,7 @@
             Lost in space
         </h4>
         <p>
-        <img src="../Imagenes/Lostinspace.jpg" width="120" height="200" alt="" />
+        <img src="Imagenes/Lostinspace.jpg" width="120" height="200" alt="" />
         </p>
     </div>
 
@@ -267,7 +267,7 @@
             Locke &amp; Key
         </h4>
         <p>
-        <img src="../Imagenes/Locke&amp;Key.webp" width="120" height="200" alt="" />
+        <img src="Imagenes/Locke&amp;Key.webp" width="120" height="200" alt="" />
         <br/><br/>
         </p>
     </div>
